# py-nuid

./: Cargo.toml  README.md  pyproject.toml
pysrc/nuid/: __init__.py  nuid.pyi
src/: lib.rs
